# agent-phonon

./: .gitignore  AGENTS.md  BACKLOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.githooks/: pre-push
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
docs/: COMMIT_RELEASE_CHECKLIST.md  L3_ORCHESTRATION.md  L4_SCHEDULING.md  PROTOCOL.md  RELEASING.md  SECURITY_REVIEW_2026-06-30.md  agent-cli-integration.md  design.md
scripts/: check-consistency.mjs  install-git-hooks.mjs  prep-publish-meta.mjs  release-guard.mjs  update-plugin.sh
sdk-python/: README.md  pyproject.toml  test_e2e.py  test_workflow_e2e.py
sdk-python/agent_phonon/: __init__.py  rpc.py  server.py
